project1/tests/p111.rc

function : int foo(int array [10][4] ) {
	return array[9][3];
}

function : int bar(int array[10]) {
	return array[0];
}

function : void main() {
	int a [5];
	int b;
	
	b = bar(a);		//error
}